--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-router-dom": "6.0.2",
     "react-router-hash-link": "^2.4.3",
     "prop-types": "^15.8.1",
+    "react-modal": "^3.14.4",
+    "@dhiwise/react-switch": "^1.0.2",
     "dotenv": "^16.0.1",
     "@tailwindcss/forms": "0.4.0"
   },
